saving this css. alignment still not correct w border and orange line

--- a/Unit3revert45/style.css
+++ b/Unit3revert45/style.css
@@ -2,16 +2,20 @@
 #page {
 	background-color:#535a6c;
 
+  
   background-image: url(logo.png);
   background-repeat: no-repeat; 
   background-position: left top;
   background-size: 147px 44px;
   padding-left: 0px;
   padding-top:0px;
+  margin-top: 100px;
+  margin-left: 115px;
+
 }
 
 #header {
-  
+ 
     
 }
 #main {
@@ -23,7 +27,7 @@
 #column1 {
   width: 631px;
   vertical-align: top;
-  margin-left: 115px;
+  margin-left: 0px;
   margin-top:360px;
   display: inline-block;
   background-color:#535a6c;
